--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,152 @@
-/* Los estilos de tu proyecto */
+/* Menú */
+#menu{
+  height: 9em; 
+}
+.logo{
+    width: 50%;
+    padding: 20% 0% 0% 45%;
+    box-sizing: content-box;
+}
+#menu .link{
+    margin-top: 2%;
+    margin-right: 5%;
+}
+/* imagen de fondo + registro */
+.imagen{
+    background-image: url(../assets/images/taxi.jpg);
+    height: 100vh;
+    background-position: bottom;
+    background-size: cover;
+    overflow: hidden;
+    position: relative;
+}
+.registry{
+    width: 40%;
+    height: 55vh;
+    margin-top: 11%;
+}
+#box{
+    padding: 0;
+}
+.title{
+    font-size: 2.3em;
+    padding-left: 10%;
+    white-space: pre-line;
+}
+.sub-title{
+    font-size: 1.5em;
+    padding-left: 10%;
+}
+.sub-title img{
+    width: 20%;
+    padding-left: 1%;
+}
+.btn-box{
+    width: 10em;
+    margin-left: 10%;
+    display: block
+}
+.linea{
+    width: 30%;
+    height: 1px;
+    border: 0;
+    background-color: white;
+    display: inline-block;
+    margin-left: 10%;
+}
+#lblText{
+    display: inline-block;
+    padding-left: 5%;
+}
+.btn-box2{
+    margin-left: 10%;
+}
+.linea:first-child{
+    margin-left: 10%;
+}
+/* contenedor app */
+#box-2{
+    margin: 0;
+    padding: 0;
+}
+#border-white{
+    border: 1px solid white;
+    margin: 5% 0% 5% 0%;
+    padding: 0;
+    width: 85%;
+}
+.title-2{
+    font-size: 2.5em;
+    padding: 5% 0% 0% 25%;
+}
+.paragraph{
+    padding: 0% 5% 0% 25%;
+    font-size: 1.5em;
+}
+.iPhone{
+    padding: 10% 0% 10% 15%;
+}
+/* contenedor convertirse en conductor */
+.imagen-2{
+    background-image: url(../assets/images/conduce.jpg);
+    height: 60vh;
+    background-position: center;
+    background-size: cover;
+    overflow: hidden;
+    position: relative;
+}
+#box-3{
+    margin: 0;
+    padding: 0;
+}
+#box-small{
+    background-color: rgba(0, 0, 0, 0.438);
+    height: 60vh;
+}
+.sub-title2{
+    font-size: 2em;
+    padding: 10% 10% 0% 10%;
+}
+.paragraph-2{
+    font-size: 1em;
+    padding: 0% 10% 10% 10%;
+}
+.btn-3{
+    margin-left: 10%;
+}
+/* contenedor ubicación */
+.sub-title3{
+    font-size: 2em;
+    padding-top: 10%;
+    padding-left: 10%;
+}
+.paragraph-3{
+    font-size: 1.5em;
+    padding-left: 10%;
+}
+#input{
+    margin-left: 10%;
+    width: 60%;
+}
+#input-2{
+    margin-left: 10%;
+    width: 60%;
+}
+.map{
+    margin-top: 10%;
+    margin-bottom: 5%;
+}
+#box-map{
+    margin: 0;
+    padding: 0;
+}
+.iconos{
+    display: inline-block;
+    margin-top: 125%;
+}
+.text-footer{
+    padding: 5%;
+}
+.img-footer{
+    margin-top: 125%;
+}
